Fix spacing after refactor

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,10 @@ body * {
   font-weight: 100;
 }
 
+article {
+  padding-bottom: 0;
+}
+
 h1,
 h2,
 h3 {
@@ -181,10 +185,6 @@ nav {
   transform: translateY(-20rem);
 }
 
-.section__content:last-of-type {
-  padding-bottom: 60rem;
-}
-
 .conduct h3 {
   padding-top: 3rem;
   font-size: 2.5rem;
@@ -327,6 +327,10 @@ p.contact__tag {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.527);
   border-radius: 2px;
   padding-left: 1rem;
+}
+
+.pb-60 {
+  padding-bottom: 60rem;
 }
 
 /* /////////////////////////////////////////////////////////////////////
